feat: Update app icons and references
Replaces generic default icons with application-specific icons and updates references in `index.html` and `manifest.json` for better branding.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="apple-touch-icon" href="/icon-192x192.png" />
+    <link rel="icon" href="/speech_generator_icon.png" sizes="any" />
+    <link rel="apple-touch-icon" href="/speech_generator_icon_192.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#14b8a6" />
